Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-96837

qdoc: warnings about generatelist incorrectly formatted

    XMLWordPrintable

Details

    • a583d490d64e3e9fe96d6770115106988d87fa47 (qt/qttools/dev) 2c7cec205681f3fab33cbaac565d967975c83096 (qt/qttools/6.2) 8113282582d5bc56115be9cdd970100238cbfaf1 (qt/tqtc-qttools/5.15)

    Description

      Something goes wrong in the printing of warnings regarding generatelist:

      \generatelist related no-such-group
      

      leads to

      (qdoc) warning: '\generatelist ☺' no such group
      

      Attachments

        For Gerrit Dashboard: QTBUG-96837
        # Subject Branch Project Status CR V

        Activity

          People

            kkohne Kai Köhne
            kkohne Kai Köhne
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes