qdoc: Fix warnings about \generatelist arguments

QString uses %1 as a replacement marker, not \1.

Fixes: QTBUG-96837
Change-Id: Ib27fd6493eb81a0a4e11dbb1c01832282a78879c
Reviewed-by: Paul Wicking <paul.wicking@qt.io>
(cherry picked from commit a583d490d64e3e9fe96d6770115106988d87fa47)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>