src/qdoc/htmlgenerator.cpp
@@ -504,7 +504,7 @@ qsizetype HtmlGenerator::generateAtom(const Atom *atom, const Node *relative, Co
             if (relative->isExample()) {
                 qDebug() << "GENERATE FILE LIST CALLED" << relative->name() << atom->string();
             } else
-                relative->location().warning(QString("'\\generatelist \1' can only be used with "
+                relative->location().warning(QString("'\\generatelist %1' can only be used with "
                                                      "'\\example' topic command")
                                                      .arg(atom->string()));
         } else if (atom->string() == QLatin1String("classhierarchy")) {
@@ -542,10 +542,10 @@ qsizetype HtmlGenerator::generateAtom(const Atom *atom, const Node *relative, Co
             if (cn) {
                 if (!generateGroupList(const_cast<CollectionNode *>(cn)))
                     relative->location().warning(
-                            QString("'\\generatelist \1' group is empty").arg(atom->string()));
+                            QString("'\\generatelist %1' group is empty").arg(atom->string()));
             } else {
                 relative->location().warning(
-                        QString("'\\generatelist \1' no such group").arg(atom->string()));
+                        QString("'\\generatelist %1' no such group").arg(atom->string()));
             }
         }
         break;
